fix: removed valign wrapper class in searchbar as it was conflicting with responsive design

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,6 +130,12 @@ footer h4 {
   margin-top: 5px;
 }
 
+.search-buttons {
+  position: relative;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
 .review-description {
   padding-top: 15px;
 }
